# dump-discogs-collection-2-csv

./: .gitignore  .pre-commit-config.yaml  .~lock.discogs_collection.xlsx#  DumpDiscocs.py  DumpDiscogs.py  LICENSE  README.md  RELEASE_NOTES_v2.0.0.md  build.bat  collection.py  config.ini  discogs_dump.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
config/: config.yaml  menu.yaml
configuration/: config.yaml  menu.yaml
docs/: development.md  installation.md  migration.md  usage.md
module/: api.py  benchmark.py  check_exists.py  cleanup_strings.py  collection.py  config.py  get_collection.py  login.py  menu.py  print.py  qr.py  setup_json.py  url_checker.py  write_to_file.py
scripts/: migrate_config.py
src/discogs_dumper/: __init__.py  __main__.py
src/discogs_dumper/api/: client.py  exceptions.py  models.py  paginator.py  rate_limiter.py
src/discogs_dumper/cli/: main.py  utils.py
src/discogs_dumper/cli/commands/: auth.py  cover.py  export.py  qr.py  server.py  stats.py
src/discogs_dumper/config/: defaults.py  settings.py
src/discogs_dumper/core/: collection.py  cover_downloader.py  exporter.py  qr_generator.py  statistics.py  webserver.py
src/discogs_dumper/persistence/: credentials.py  models.py  state.py
src/discogs_dumper/utils/: logging.py  sanitization.py
tests/: conftest.py
tests/fixtures/: api_responses.json
tests/integration/: test_collection_workflow.py  test_export_workflow.py
tests/unit/: test_api_client.py  test_credentials.py  test_sanitization.py  test_state.py
